2007-10-04  Kevin Decker  <kdecker@apple.com>

        Reviewed by John.
        
        <rdar://problems/5516309>
        
        * page/FrameView.cpp:
        (WebCore::FrameView::updateControlTints): Avoid the expense of updating tints on controls for the
        empty-window case since this can take a significant amount of time even on windows that have no
        content at all. Note this fix specifically optimizes the empty window/tab case; for a more broad
        fix John wrote up rdar://problem/5521050.

2007-10-04  Darin Adler  <darin@apple.com>

        * page/Frame.h: Put functions into categories to indicate other classes
        we'd like to move them into in the future. Just organizational -- no code
        change.

2007-10-04  Lars Knoll  <lars@trolltech.com>

        Reviewed by maciej.

        fix a crash in the FrameLoader that can happen under certain
        conditions in the Qt port.

        Test: fast/loader/iframe-crash-on-missing-image.xhtml

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::receivedMainResourceError):

2007-10-03  Alp Toker  <alp@atoker.com>

        Reviewed by Adam.

        http://bugs.webkit.org/show_bug.cgi?id=14726
        [gtk] API design. Mapping the WebView delegates to signals.

        Change the API namespace of the Gtk+ port from 'WebKitGtk' to 'WebKit'.

        * WebCore.pro:

2007-10-03  Alp Toker  <alp@atoker.com>

        Reviewed by Eric.

        http://bugs.webkit.org/show_bug.cgi?id=14129
        [CAIRO] Support the canvas element

        Add a new canvas implementation using Cairo for rendering.

        * html/CanvasGradient.cpp:
        (WebCore::CanvasGradient::CanvasGradient):
        (WebCore::CanvasGradient::~CanvasGradient):
        (WebCore::CanvasGradient::addColorStop):
        (WebCore::CanvasGradient::platformShading):
        * html/CanvasGradient.h:
        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::setFillStyle):