@@ -1,3 +1,14 @@
+2007-10-04  Adele Peterson  <adele@apple.com>
+
+        Reviewed by Darin.
+
+        WebKit/win part of fix for <rdar://problem/5369017> REGRESSION: Can't tab to webview that doesn't have editable content
+
+        * WebView.cpp: Added setInitialFocus so the application can specify that its handing off focus to WebKit
+          and so that it can specify the focus direction.
+        * WebView.h: ditto.
+        * Interfaces/IWebViewPrivate.idl: ditto.
+
 2007-10-03  Ada Chan  <adachan@apple.com>
 
         <rdar://problem/5521230> Implement IWebIconDatabase::iconURLForURL in WebKit for windows
